--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,15 +1,16 @@
 specVersion: 0.0.2
-description: Indexing all Ethereum Block data
-repository: https://github.com/blocklytics/ethereum-blocks
+description: Indexing all Qtum Block data
+repository: https://github.com/qiswapexchange/ethereum-blocks
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: ConverterRegistryContract
-    network: rinkeby
+    network: testnet
     source:
-      address: "0x0ddff327ddf7fe838e3e63d02001ef23ad1ede8e"
+      address: "0x028b922376711b1b580448a4ca1371baab13e09a"
       abi: ConverterRegistryContract
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
